<resources>

    <string name="app_name">ピアノ電卓</string>

    // 電卓のリザルト画面とボタンの文字
    <string name="formula_text"/>
    <string name="n0">0</string>
    <string name="n1">1</string>
    <string name="n2">2</string>
    <string name="n3">3</string>
    <string name="n4">4</string>
    <string name="n5">5</string>
    <string name="n6">6</string>
    <string name="n7">7</string>
    <string name="n8">8</string>
    <string name="n9">9</string>
    <string name="dot">.</string>
    <string name="delete">D</string>
    <string name="clear">C</string>
    <string name="equal">=</string>
    <string name="add">+</string>
    <string name="subtract">-</string>
    <string name="multiply">×</string>
    <string name="divide">÷</string>

    // ヘッダー画像のラベル
    <string name="headerImage">÷headerImage</string>

</resources>