<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.36"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent=".11"
        android:layout_height="0dp"
        android:contentDescription="@string/headerImage"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/piano"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvFormula"
        android:layout_width="match_parent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent=".12"
        android:layout_height="0dp"
        android:layout_marginTop="3dp"
        android:fontFamily="cursive"
        android:gravity="center|end"
        android:maxLines="1"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:text="@string/formula_text"
        android:textColor="@color/colorBlack"
        android:textStyle="bold"
        android:textSize="70dp"
        app:autoSizeMaxTextSize="70dp"
        app:autoSizeMinTextSize="17dp"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:targetApi="o" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvResult"
        android:layout_width="match_parent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent=".12"
        android:layout_height="0dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        app:autoSizeMinTextSize="17dp"
        app:autoSizeTextType="uniform"
        android:textSize="50dp"
        app:autoSizeMaxTextSize="50dp"
        android:maxLines="1"
        android:fontFamily="cursive"
        android:gravity="center|end"
        android:paddingStart="25dp"
        android:paddingEnd="35dp"
        android:text="@string/formula_text"
        android:textStyle="bold"
        tools:targetApi="o"
        app:layout_constraintBottom_toBottomOf="@+id/guideline"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <View
        android:id="@+id/topBorder"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorBlack"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:baselineAligned="false"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <Button
                android:id="@+id/n7"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorBlack"
                android:fontFamily="cursive"
                android:soundEffectsEnabled="false"
                android:text="@string/n7"
                android:textColor="@color/colorWhite"
                android:textSize="60dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/n4"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorBlack"
                android:fontFamily="cursive"
                android:soundEffectsEnabled="false"
                android:text="@string/n4"
                android:textColor="@color/colorWhite"
                android:textSize="60dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/n1"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorBlack"
                android:fontFamily="cursive"
                android:soundEffectsEnabled="false"
                android:text="@string/n1"
                android:textColor="@color/colorWhite"
                android:textSize="60dp"
                android:textStyle="bold" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.9">

                <Button
                    android:id="@+id/n0"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorWhite"
                    android:fontFamily="cursive"
                    android:soundEffectsEnabled="false"
                    android:text="@string/n0"
                    android:textColor="@color/colorBlack"
                    android:textSize="60dp"
                    android:textStyle="bold" />
                <View
                    android:id="@+id/verticalLine1"
                    android:translationZ="2dp"
                    android:layout_width="3dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:background="@color/colorGray" tools:targetApi="lollipop" />

            </FrameLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/n8"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorWhite"
                android:fontFamily="cursive"
                android:soundEffectsEnabled="false"
                android:text="@string/n8"
                android:textColor="@color/colorBlack"
                android:textSize="60dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/n5"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorWhite"
                android:fontFamily="cursive"
                android:soundEffectsEnabled="false"
                android:text="@string/n5"
                android:textColor="@color/colorBlack"
                android:textSize="60dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/n2"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorWhite"
                android:fontFamily="cursive"
                android:soundEffectsEnabled="false"
                android:text="@string/n2"
                android:textColor="@color/colorBlack"
                android:textSize="60dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btDot"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.9"
                android:background="@color/colorWhite"
                android:fontFamily="cursive"
                android:soundEffectsEnabled="false"
                android:text="@string/dot"
                android:textColor="@color/colorBlack"
                android:textSize="60dp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">


            <Button
                android:id="@+id/n9"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorBlack"
                android:fontFamily="cursive"
                android:soundEffectsEnabled="false"
                android:text="@string/n9"
                android:textColor="@color/colorWhite"
                android:textSize="60dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/n6"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorBlack"
                android:fontFamily="cursive"
                android:soundEffectsEnabled="false"
                android:text="@string/n6"
                android:textColor="@color/colorWhite"
                android:textSize="55dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/n3"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorBlack"
                android:fontFamily="cursive"
                android:soundEffectsEnabled="false"
                android:text="@string/n3"
                android:textColor="@color/colorWhite"
                android:textSize="60dp"
                android:textStyle="bold" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.9">

                <Button
                    android:id="@+id/btEqual"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorWhite"
                    android:fontFamily="cursive"
                    android:soundEffectsEnabled="false"
                    android:text="@string/equal"
                    android:textColor="@color/colorBlack"
                    android:textSize="80dp"
                    android:textStyle="bold" />

                <View
                    android:id="@+id/verticalLine2"
                    android:translationZ="2dp"
                    android:layout_width="3dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:background="@color/colorGray" tools:targetApi="lollipop" />


            </FrameLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:id="@+id/btClear"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorWhite"
                    android:fontFamily="cursive"
                    android:soundEffectsEnabled="false"
                    android:text="@string/clear"
                    android:textColor="@color/colorBlack"
                    android:textSize="55dp" />

                <Button
                    android:id="@+id/btDelete"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorWhite"
                    android:fontFamily="cursive"
                    android:soundEffectsEnabled="false"
                    android:text="@string/delete"
                    android:textColor="@color/colorBlack"
                    android:textSize="60dp"
                    android:textStyle="bold" />

            </FrameLayout>

            <Button
                android:id="@+id/btDivide"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorWhite"
                android:fontFamily="cursive"
                android:soundEffectsEnabled="false"
                android:text="@string/divide"
                android:textColor="@color/colorBlack"
                android:textSize="70dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btMultiply"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorWhite"
                android:fontFamily="cursive"
                android:soundEffectsEnabled="false"
                android:text="@string/multiply"
                android:textColor="@color/colorBlack"
                android:textSize="70dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btSubtract"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorWhite"
                android:fontFamily="cursive"
                android:soundEffectsEnabled="false"
                android:text="@string/subtract"
                android:textColor="@color/colorBlack"
                android:textSize="70dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btAdd"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorWhite"
                android:fontFamily="cursive"
                android:soundEffectsEnabled="false"
                android:text="@string/add"
                android:textColor="@color/colorBlack"
                android:textSize="70dp"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>